objects/tffa__AllowedAddress__c.object
<CustomObject>
    <description>Defines geographical location restrictions for services offered by a financial institution. Address restriction is primarily applied to a zip code. However, this can be extended to county, city, state and country. Some other ways this can be used - check if state and zip code pair is valid, get a list of counties for a zip code.</description>
    <fields>
        <fullName>tffa__BrandCodeSet__c</fullName>
        <description>Brand code of current application. Supports multiple (semicolon separated). A fact.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Ensure you wrap each individual value in semicolons e.g. ;123;456;</inlineHelpText>
        <label>Brand code (set)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__City__c</fullName>
        <description>The city where the restriction applies.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Continent__c</fullName>
        <description>The continent where the restriction applies.</description>
        <label>Continent</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__AddressContinent</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__Country__c</fullName>
        <description>The country where the restriction applies.</description>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__AddressCountry</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__CountyName__c</fullName>
        <description>A display label for the county (if captured).</description>
        <encryptionScheme>None</encryptionScheme>
        <label>County name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__County__c</fullName>
        <description>The county where the restriction applies.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marks the allowed address as unavailable for consumption.</description>
        <label>Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__ExternalId__c</fullName>
        <description>External id as referred by external system</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tffa__IsBusinessConfiguration__c</fullName>
        <description>Business configuration marker.</description>
        <formula>TRUE</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Business Configuration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the object is marked for delete.</description>
        <label>Is Deleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsRestricted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the row represents a disallowed address</description>
        <label>Is Restricted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__PurposeSet__c</fullName>
        <description>The purpose of the restriction. Supports multiple. A restriction can be configured for multiple purpose..</description>
        <label>Purpose (set)</label>
        <required>true</required>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__AllowedAddressPurpose</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__SortOrder__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Controls the relative order of the item in a list.</description>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__State__c</fullName>
        <description>The state (address) where the restriction applies.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__ZipCode__c</fullName>
        <description>The zip code where the restriction applies.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Zip code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Allowed Address</label>
    <listViews>
        <fullName>tffa__All</fullName>
        <columns>NAME</columns>
        <columns>tffa__ZipCode__c</columns>
        <columns>tffa__County__c</columns>
        <columns>tffa__State__c</columns>
        <columns>tffa__Country__c</columns>
        <columns>tffa__PurposeSet__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>tffa__GeoFencing</fullName>
        <columns>NAME</columns>
        <columns>tffa__City__c</columns>
        <columns>tffa__State__c</columns>
        <columns>tffa__ZipCode__c</columns>
        <columns>tffa__Country__c</columns>
        <columns>tffa__Continent__c</columns>
        <columns>tffa__IsRestricted__c</columns>
        <columns>tffa__Disabled__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>tffa__PurposeSet__c</field>
            <operation>equals</operation>
            <value>GEO</value>
        </filters>
        <label>Geo Fencing Restrictions</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Allowed Addresses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>